# TwoDaysFoamProgrammingCourse

./: README.md
RU/: rmSvn.sh
RU/Ext/Henrik Rusche/.svn/: all-wcprops  entries
RU/Ext/Henrik Rusche/ShapeOptCases/: pax_global_header
RU/Files/: cleanAll.sh
RU/Files/Figures/: timeScheme.odg
RU/Files/day1_CPlusPlus/BaseTypes/: typesTut.C
RU/Files/day1_CPlusPlus/classes/: classesTut.C  figShapes.C  figShapes.H
RU/Files/day1_CPlusPlus/forIfWhile/: forIfWhileTut.C
RU/Files/day1_CPlusPlus/specialTypes/: specialTypesTut.C
RU/Files/day1_MakeSystems/Autoconf/: Makefile.am  circle.cxx  cleanDir.sh  configure.ac  main.cxx  makeAll.sh  square.cxx
RU/Files/day1_MakeSystems/CMake/: CMakeLists.txt  cleanAll.sh  doAll.sh
RU/Files/day1_MakeSystems/Makefile/: makefile
RU/Literature/: OpenFOAM guide Matrices in OpenFOAM - OpenFOAMWiki.html  OpenFOAM guide Matrix coefficients - OpenFOAMWiki.html
RU/Odp/: 00_main.odp  day1_1_Intro.odp  day1_1_Intro_v2.odp  day1_2_CPlusPlus.odp  day1_3_UniDev.odp  day1_4_SolverBasics.odp  day1_5_LabWork.odp  day2_6_StrucUnits.odp  day2_7_SolverReview.odp  day2_8_LabWorks.odp
RU/Odt/: unicluster-advanced-course-program.odt
RU/Swf/: day1_1_Intro.pdf.swf  day1_2_CPlusPlus.pdf.swf  day1_3_UniDev.pdf.swf  day1_4_SolverBasics.pdf.swf  day1_5_LabWork.pdf.swf  day2_6_StrucUnits.pdf.swf  day2_7_SolverReview.pdf.swf  day2_8_LabWorks.pdf.swf  make-swf.sh  pdf2swf  swfcombine
RU/swftools-2011-01-23-1815/: configure  configure.in
RU/swftools-2011-01-23-1815/src/: swfrender  ttftool
RU/swftools-2011-01-23-1815/swfs/: Makefile
(+1152 files in other folders)
