#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([main], [1.0])
AC_CONFIG_SRCDIR([main.cxx])
AM_INIT_AUTOMAKE(main, 1.6)


# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h unistd.h])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([sqrt])
AC_OUTPUT([Makefile])
